--- a/source/partials/cards/_card-guide-horiz.slim
+++ b/source/partials/cards/_card-guide-horiz.slim
@@ -4,6 +4,7 @@
     - thumb = entry.bg_image.url
 - else
     - thumb = nil
+/- if defined?("show_button") && show_button == true
 
 / shows an entry with a thumbnail
 .media-object.article-card
