New Case Study (Life Sciences)
- New product list partial (spits out just products via nav collection)
- Updated share images in category pages
- text-right-on-large class

--- a/source/assets/scss/modules/utility.scss
+++ b/source/assets/scss/modules/utility.scss
@@ -168,6 +168,12 @@ hr {
         }
     }
 }
+.text-right-on-large {
+    text-align: initial;
+    @include breakpoint (large) {
+        text-align: right;
+    }
+}
 .radius {
     border-radius: $global-radius;
     overflow: hidden;
