--- a/source/partials/snippets/_nav-sub-product.slim
+++ b/source/partials/snippets/_nav-sub-product.slim
@@ -2,14 +2,14 @@ ruby:
   unless [current_page.data.category, current_page.data.navTitle, current_page.data.subnav].all?
     puts "⚠️ The page at #{current_page.url} is missing key variables for the subnav! \n Required: category, navTitle, subnav (a yaml array)."
   end
-#top.show-for-large.z-18 data-sticky-container="data-sticky-container"
-  .subnav.sticky.sticky-nav data-sticky="data-sticky" data-options="marginTop:0; topAnchor:top; activeClass:active; stickyOn:large;" data-theme="light"
+#top.show-for-medium-large.z-18 data-sticky-container="data-sticky-container"
+  .subnav.sticky.sticky-nav data-sticky="data-sticky" data-options="marginTop:0; topAnchor:top; activeClass:active; stickyOn:medium-large;" data-theme="light"
     ul.menu.menu-secondary.align-center.align-middle data-magellan="data-magellan"
       li
         nav aria-label=("You are here:") role="navigation" 
           ul.breadcrumbs.align-middle.nomargin
             li
-              a href="#" Home
+              a href="/" Home
             - if defined?(parent_url) # no parent_url, no parent 'folder' for u. Use 'category' in frontmatter or pass string
               - if defined?(parent_label) ? label = parent_label : label = current_page.data.category
               li
