--- a/source/case-study/life-sciences.html.slim
+++ b/source/case-study/life-sciences.html.slim
@@ -5,13 +5,12 @@ navTitle: "Life Sciences Case Study"
 category: "products"
 author: "Datica, Inc."
 tags: "compliance, HIPAA, HL7, FHIR, interoperability, EHR, Kubernetes"
-date: "September 25, 2018"
+date: "May 11, 2019"
 ogType: "product"
-customCSS: "products, products-mastheads"
+customCSS: "products"
 layout: landing
-collectionName: "products"
-collectionOrder: 3
 priority: "0.9"
+hide_from_sitemap: true
 subnav:
   -
     title: "The Situation"
@@ -33,7 +32,7 @@ subnav:
 ruby:
   current_page.data.date = DateTime.now.strftime('%B %-d, %Y')
   current_year = DateTime.now.strftime('%Y')
-  current_page.data.share_image = 'https://images.ctfassets.net/189dvqdsjh46/4wojUl2MFGICcaykkGIMCK/26d4dd220c5ebbf9335aa81c7d3d575c/share-ccms.jpg'
+  current_page.data.share_image = 'https://images.ctfassets.net/189dvqdsjh46/2D6EhngFKT8gG5jveOM1ef/c9a5e37f32fcf3a0ba1663b7b69a1ce9/case-study-life-sci-share.jpg'
   the_form = data.site.forms['7bcj6s0e7mc0a2iowoOmIS']
   featured_img = 'https://images.ctfassets.net/189dvqdsjh46/MdBS4knzIgVpwDFaCfx9V/657017205c8bf60d548c30824e88da88/Doctor_on_ipad_sm.jpg'
   diagram_1 = "https://images.ctfassets.net/189dvqdsjh46/1DnnFdmBAYcWSyiGE2M6aK/1651ceeb1d2343007b09a5ce4c20ed38/c3-diagram-1.png"
@@ -71,11 +70,11 @@ section.bg-gray-11.masthead-cs.container-image-fill.lozad data-background-image=
     .row
       .columns.small-12.large-3
         h2.headline-3.text-bold.text-right-on-large The Situation
-      .columns.small-12.large-5.text-serif.lead
+      .columns.small-12.medium-large-6.large-5.text-serif.lead
         p The data integration committee at a Fortune 500 life sciences organization is responsible for strategy, data standards, and tooling as the company scales to more than 100 application environments across different global regions. The committee is made up of product management personnel across product and service lines, innovation staff and directors, and business technology leaders.  As one would expect, the compliance office is also critically involved to provide sign off on all plans. 
         p Together, this global team is charged with modernizing web and mobile application experiences for commercial applications for care management, consumer applications for personal health management and access, and clinical research and development applications to analyze patient-reported outcomes. 
         /p They knew they needed to move all applications into the cloud to ensure they could easily deploy and scale while ensuring all PHI was handled in a compliant and HITRUST-certified manner. They also needed a single source of truth in their data to replace the current siloed and duplicate systems. In 2016, they found what they were looking for with AWS and Datica.
-      .columns.small-12.large-4.text-small
+      .columns.small-12.medium-large-6.large-4.text-small
         .group
           h4.headline-6.spaced-out Who
           p Fortune 500 Global Life Sciences company
@@ -140,7 +139,7 @@ section.section-article--lg.bg-gray-2 id=current_page.data.subnav[3].slug data-m
 
 section.section-article--med.strip.strip-cks
   .row.align-center.text-center
-    .columns.small-12.large-10
+    .columns.small-12
       h2.headline-3 Datica's Proven Integration Track Record
   = partial "partials/content/stats-integration"
 
