--- a/source/podcast/index.html.erb
+++ b/source/podcast/index.html.erb
@@ -8,13 +8,13 @@ share_image: "https://images.ctfassets.net/189dvqdsjh46/at0B5zJqmIk8EAoKqgQww/bc
 header: "The Healthcare Innovators Podcast"
 subheader: "How does healthcare innovate? Datica explores this topic in a new series of interviews with several of the industry's top thinkers and doers. Follow along with us as we uncover insights to catalyzing change in healthcare."
 layout: basic
-customCSS: "podcast"
 feed_url: "https://datica.com/podcast/feed.xml"
 ---
 <% 
     sorted_webinars = data.site.webinars.to_a.sort_by{ |id, webinars| webinars['event_date'] }.reverse!
     sorted_reports = data.site.reports.to_a.sort_by{ |id, report| report['pub_date'] }.reverse!
     sorted_podcasts = data.site.podcast.to_a.sort_by{ |id, podcast| podcast['pub_date'] }.reverse!
+    sorted_guides = data.site.guides.to_a.sort_by{ |id, guides| guides['_meta']['created_at'] }.reverse!
 %>
 <div class="container-color--dark-alt container-image--bottom" data-interchange="[https://images.ctfassets.net/189dvqdsjh46/5OUXo4nQ6kaqAsqE8McqIu/fcd84d36da7ad0c4b91ecb9cadb7ce87/art-sound-bars-bg.svg, small]">
     <%= partial "partials/head/header", :locals => { :style => "light" } %>
@@ -31,7 +31,6 @@ feed_url: "https://datica.com/podcast/feed.xml"
     <div class="row">
         <div class="columns small-12 large-8">
             <div class="group">
-                <% sorted_podcasts = data.site.podcast.to_a.sort_by{ |id, podcast| podcast['pub_date'] }.reverse! %>
                 <% sorted_podcasts.take(1).each do | id, podcast | %>
                 <%# data.site.podcast.each do |id, podcast| %>
                     <div class="row collapse group">
@@ -74,7 +73,7 @@ feed_url: "https://datica.com/podcast/feed.xml"
         </aside>
     </div>
 </section>
-<section class="section-article container-color--gray-light">
+<section id="podcasts" class="section-article container-color--gray-light">
     <div class="row">
         <div class="columns small-12 large-8">
             <% sorted_podcasts[1...-1].each do | id, podcast | %>
@@ -84,10 +83,16 @@ feed_url: "https://datica.com/podcast/feed.xml"
             <hr>
             <%= partial "partials/snippets/to-top" %>
         </div>
-        <aside class="columns small-12 large-4 section--sidebar">
-            <% sorted_reports.take(1).each do | id, report_entry | %>
-            <%= partial "partials/cards/card-report", :locals => { :post => report_entry, :style => "dark", :size => "small" } %>
-            <% end %>
+        <aside class="columns small-12 large-4 section--sidebar" data-sticky-container>
+            <div class="sticky" data-sticky data-options="anchor: podcasts; stickyOn: large;">
+                <div class="group--2x">
+                  <%= partial "partials/cards/card-report-simple", :locals => { :post => data.site.guides['6evss0t4I0IC2cQasg0K2O'], :style => "none", :size => "small", :desc => true, :show_button => true } %>
+
+                </div>
+                <% sorted_reports.take(1).each do | id, report_entry | %>
+                <%= partial "partials/cards/card-report", :locals => { :post => report_entry, :style => "dark", :size => "small" } %>
+                <% end %>
+            </div>
         </aside>
     </div>
 </section>
