--- a/source/assets/scss/modules/content.scss
+++ b/source/assets/scss/modules/content.scss
@@ -1,7 +1,7 @@
 $media-pad: $pad;
 article.content-dynamic {
     margin-bottom: $media-pad; // this will add space above CTAs, only in <article>, allowing most content stuff to be applicable anywhere
-    font-size: larger;
+    // font-size: 1.1rem;
 }
 
 // these article-level overrides for unstyled content from CMS (contentful). Apply this class on <article> or other spots you need these styles.
