--- a/source/partials/snippets/_podcast-summary.erb
+++ b/source/partials/snippets/_podcast-summary.erb
@@ -6,37 +6,34 @@
         <% else %>
             <%= podcast['pub_date'].strftime('%B %-d, %Y') %>
         <% end %>
-    </span>
+    </span>6
     <h4 class="headline-5"><a href="/innovation/<%= podcast["slug"] %>/"><%= podcast["title"] %></a></h4>
     <%= partial("partials/snippets/person", :locals => { :p => podcast["guest"] }) %>
 
 <% else %>
-    <div class="row group">
+    <div class="row collapse group">
         <div class="columns small-12 medium-9 large-9 medium-order-2">
-            <span class="blog-date color-talk-alt">
+            <span class="text-small text-bold text--gray-3">
                 <% if locals.key?(:itemLabel) %>
                     <%= itemLabel %>
                 <% else %>
                     <%= podcast['pub_date'].strftime('%B %-d, %Y') %>
                 <% end %>
             </span>
-            <h4 class="headline-5"><a href="/innovation/<%= podcast["slug"] %>/"><%= podcast["title"] %></a></h4>
-            <% if podcast.has_key?("guest") %>
-                <% if podcast["guest"].has_key?("fullname") %>
-                    <a class="" href="/innovation/<%= podcast["slug"] %>" title="Listen to this episode now">
-                        <img src="https://images.ctfassets.net/189dvqdsjh46/7dsvS1pbuo2etN908phqGD/4acf3ebbf566f0f31cf74882f6faa3e8/loader-disc.svg" data-src="<%= podcast["guest"]["profile_pic"]["url"] %>?fit=thumb&w=400&h=400&f=face&q=45" class="lozad avatar--large-mid circle float-right hide-for-medium" alt="<%= podcast["guest"]["fullname"] %>">
-                    </a>
-                <% end %>
+            <h4 class="headline-5"><a class="text-bold" href="/innovation/<%= podcast["slug"] %>/"><%= podcast["title"] %></a></h4>
+            <% if podcast.has_key?("guest") && podcast["guest"].has_key?("fullname") %>
+                <a class="" href="/innovation/<%= podcast["slug"] %>" title="Listen to this episode now">
+                    <img class="lozad avatar--large-mid circle float-right hide-for-medium" src=loader_disc_svg data-src="<%= podcast["guest"]["profile_pic"]["url"] %>?fit=thumb&w=400&h=400&f=face&q=45" alt="<%= podcast["guest"]["fullname"] %>">
+                </a>
             <% end %>
             <%= Kramdown::Document.new(podcast["summary"]).to_html %>
         </div>
-        <div class="columns small-12 medium-3 large-3 text-center medium-order-1 show-for-medium">
-            <% if podcast.has_key?("guest") %>
-                <% if podcast["guest"].has_key?("fullname") %>
-                    <a class="" href="/innovation/<%= podcast["slug"] %>/" title="Listen to this episode now">
-                        <img src="https://images.ctfassets.net/189dvqdsjh46/7dsvS1pbuo2etN908phqGD/4acf3ebbf566f0f31cf74882f6faa3e8/loader-disc.svg" data-src="<%= podcast["guest"]["profile_pic"]["url"] %>?fit=thumb&w=400&h=400&f=face&q=45" class="lozad avatar--large-mid circle" alt="<%= podcast["guest"]["fullname"] %>">
-                    </a>
-                <% end %>
+        <div class="columns small-12 medium-3 large-3 text-center medium-order-1 show-for-medium person-simple">
+            <% if podcast.has_key?("guest") && podcast["guest"].has_key?("fullname") %>
+                <a class="" href="/innovation/<%= podcast["slug"] %>/" title="Listen to this episode now">
+                    <img class="lozad avatar--large-mid circle" src=loader_disc_svg data-src="<%= podcast["guest"]["profile_pic"]["url"] %>?fit=thumb&w=400&h=400&f=face&q=45" alt="<%= podcast["guest"]["fullname"] %>">
+                </a>
+                <h4 class="pad--sm person-title text-center"><%= podcast["guest"]["fullname"] %></h4>
             <% end %>
         </div>
     </div>
