--- a/source/contentful_templates/webinar.html.slim
+++ b/source/contentful_templates/webinar.html.slim
@@ -50,6 +50,9 @@ ruby:
 scss:
     .cta {
         margin-top: 0;
+        @media screen and (min-width: 40em) {
+            max-width: 100%;
+        }
     }
 / section#top.container-gray-2.container-image-fill data-interchange="[#{thumb}, small], [#{thumb}#{image_featured_large}, large]"
 .strip-bright.strip-small
@@ -105,13 +108,13 @@ scss:
                             img.lozad.img-cover src="#{thumb}?w=250&fm=jpg&q=10" data-src="#{thumb}?w=840"
     section#description.section-article--med
         .row.align-center
-            .columns.small-12.large-6
+            .columns.small-12.medium-6.large-6
                 - if p.has_key?("lead")
                     = Kramdown::Document.new(p["lead"]).to_html
                 - if p.has_key?("desc")
                     article.group
                         = Kramdown::Document.new(p["desc"]).to_html
-            .columns.small-12.large-4
+            .columns.small-12.medium-6.large-4
                 - if is_future == true
                     .is-registered.callout.drop.hide
                         = inline_svg("small/icon-check-circle", class: "float-right icon-size--large svg-color--green")
@@ -131,7 +134,7 @@ scss:
                             h3.headline-4.text-center.group = (is_future == true ? "Register" : "Register")
                             = partial "partials/snippets/form", :locals => { :the_form => data.site.forms[p.related_form.id].custom_form }
                 - if p.has_key?("cta_next")
-                    #cta-next.is-registered.hide
+                    #cta-next.is-registered.hide.text-center-for-small
                         h4.headline-5.spaced-out.margin-bottom-small Ready for more?
                         = partial("/partials/content/cta", :locals => { :p => p["cta_next"] })
                 = partial "partials/snippets/button", :locals => { :label => "See All Datica Webinars", :url => "/webinars/", :button_classes => "button hollow", :item_id => "all_webinars", :icon => "icon-webinar-sm", :icon_align => "left" }
